# Wink-Signals

./: .gitignore  CMakeLists.txt  README.md  readme.md  wink-config.cmake.in
FastTEvent/: EventQueue.h  EventSender.h
examples/: Benchmark.cpp
examples/benchmark/: CMakeLists.txt
wink/: event_queue.h  event_queue.hpp  signal.h  signal.hpp  slot.h  slot.hpp
